--- a/recipe.html
+++ b/recipe.html
@@ -12,6 +12,7 @@
             </ul>
         </nav>
         <h1>Quick hummus recipe</h1>
+        <img src="images/hummus.jpg">
 
         <p>This recipe makes quick, tasty hummus, with no messing. It has been adapted from a number of different recipes that I have read over the years.</p>
 
