--- a/schemes.html
+++ b/schemes.html
@@ -1,71 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='UTF-8'/>
-    <title>Positioning Is Easy!</title>
-    <link href='styles.css' rel='stylesheet'>
-  </head>
-  <body>
+    <head>
+        <meta charset='UTF-8'/>
+        <title>Positioning Is Easy!</title>
+        <link href='schemes.css' rel='stylesheet'>
+    </head>
+    <body>
 
         <div class='container'>
-          <div class='example relative'>
-            <div class='item'><img src='images/static.svg' /></div>
-            <div class='item item-relative'><img src='images/relative.svg' /></div>
-            <div class='item'><img src='images/static.svg' /></div>
-          </div>
+            <div class='example relative'>
+                <div class='item'><img src='images/static.svg' /></div>
+                <div class='item item-relative'><img src='images/relative.svg' /></div>
+                <div class='item'><img src='images/static.svg' /></div>
+            </div>
         </div>
 
         <div class='container'>
-          <div class='example absolute'>
-            <div class='item'><img src='images/static.svg' /></div>
-            <div class='item item-absolute'><img src='images/absolute.svg' /></div>
-            <div class='item'><img src='images/static.svg' /></div>
-          </div>
+            <div class='example absolute'>
+                <div class='item'><img src='images/static.svg' /></div>
+                <div class='item item-absolute'><img src='images/absolute.svg' /></div>
+                <div class='item'><img src='images/static.svg' /></div>
+            </div>
         </div>
 
         <div class='container'>
-          <div class='example fixed'>
-            <div class='item'><img src='images/static.svg' /></div>
-            <div class='item item-fixed'><img src='images/fixed.svg' /></div>
-            <div class='item'><img src='images/static.svg' /></div>
-          </div>
+            <div class='example fixed'>
+                <div class='item'><img src='images/static.svg' /></div>
+                <div class='item item-fixed'><img src='images/fixed.svg' /></div>
+                <div class='item'><img src='images/static.svg' /></div>
+            </div>
         </div>
-        <ul class='menu'>
-      <li class='dropdown'><span>Features &#9662;</span>
-        <ul class='features-menu'>           
-          <li><a href='#'>Harder</a></li>
-          <li><a href='#'>Better</a></li>
-          <li><a href='#'>Faster</a></li>
-          <li><a href='#'>Stronger</a></li>
-        </ul>                               
-      </li>
-      <li><a href='#'>Blog</a></li>          
-      <li><a href='#'>Subscribe</a></li>
-      <li><a href='#'>About</a></li>
-    </ul>
+
         <script>
-      var left = 0;
+            var left = 0;
 
-      function frame() {
-        var element = document.querySelector('.item-relative');
-        left += 2;
-        element.style.left = left + 'px';
-        if (left >= 300) {
-          clearInterval(id)
-        }
-      }
+            function frame() {
+                var element = document.querySelector('.item-relative');
+                left += 2;
+                element.style.left = left + 'px';
+                if (left >= 300) {
+                    clearInterval(id)
+                }
+            }
 
-      var id = setInterval(frame, 10)
-    </script>
-      <div class='header'>
-          <div class='logo'><img src='images/awesome-logo.svg'/></div>
-          <ul class='menu'>
-            <li class='dropdown'><span>Features ▾</span></li>
-            <li><a href='#'>Blog</a></li>
-            <li><a href='#'>Subscribe</a></li>
-            <li><a href='#'>About</a></li>
-          </ul>
-        </div>
-
-      </body>
-    </html>
+            var id = setInterval(frame, 10)
+        </script>
+     
+    </body>
+</html>
