--- a/graphics.html
+++ b/graphics.html
@@ -50,5 +50,12 @@
                 <td> Graphics Interchange Format</td>  
             </tr>
         </table>
+        <h2 id="photoalbum"> Web photo album</h2>
+        <a href="images/default.jpg"></a>
+        <img src="images/default.jpg" width="72" height="72" alt="default skin" class="album">
+        <a href="images/default2.jpg"></a>
+        <img src="images/default2.jpg" width="72" height="72" alt="default skin" class="album">
+        <a href="images/default3.jpg"></a>
+        <img src="images/default3.jpg" width="72" height="72" alt="default skin" class="album">
     </body>
 </html>
