--- a/graphics.html
+++ b/graphics.html
@@ -5,6 +5,7 @@
         <title>Web Portfolio: Your Name</title>
     </head>
     <body>
+       <link rel="shortcut icon" href="images/favicon.ico" >
         <h1>Web Portfolio: Graphics</h1>
         <h2 id="evaluation"/>
         <p>Question 1 answers</p>
