--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>Entity portfolio</title>
     </head>
+    <link href="styles/style.css" rel="stylesheet">
     <body style="background-color: darkred">
+    <link rel="shortcut icon" href="images/favicon.ico" >
        <header>
         <center>
         <h1>Entity portfolio</h1>
@@ -23,6 +25,11 @@
         </nav>
         </header>
         <main style="background-color: darkslategray; width 80%; margin:auto; ">
+           <button type="button" class="btn-pod">JOIN</button>
+            <button type="button" class="btn-pod">SHARE</button>
+
+</div>
+
             <article></article>
             
         
