--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="styles/style.css" rel="stylesheet">
     <body style="background-color: darkred">
     <link rel="shortcut icon" href="images/favicon.ico" >
+    
        <header>
         <center>
         <h1>Entity portfolio</h1>
@@ -27,6 +28,15 @@
         <main style="background-color: darkslategray; width 80%; margin:auto; ">
            <button type="button" class="btn-pod">JOIN</button>
             <button type="button" class="btn-pod">SHARE</button>
+             <h1 id="photoalbum"> Web photo album</h1>
+        <a href="images/default.jpg"></a>
+        <img src="images/default.jpg" width="72" height="72" alt="default skin" class="album">
+        <a href="images/default2.jpg"></a>
+        <img src="images/default2.jpg" width="72" height="72" alt="default skin" class="album">
+        <a href="images/default3.jpg"></a>
+        <img src="images/default3.jpg" width="72" height="72" alt="default skin" class="album">
+        <a href="images/king%20default.jpg" width="72" height="72" alt="default skin" class="album">
+            <img src="images/king%20default.jpg"></a>
 
 </div>
 
