--- a/pixels.html
+++ b/pixels.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+   <header>
+      <nav>
+          
+      </nav>
+       
+   </header>
     <head>
         <link rel="stylesheet" href="styles/pixels.css">
         <script src="scripts/pixels.js"></script>  
